--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>CGI Proovitöö</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/css/style.css">
+    <link rel="stylesheet" href="assets/styles/css/adaptive.css">
 </head>
 <body>
     <header id="header">
